--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,16 @@
 <html>
   <head>
     <title><%= title %></title>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src='javascripts/trafficlight.js'></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <ul>
+      <div id=red class="traffic_cell <% if (status.red == 1) {%>active<% } %>"></div>
+      <div id=yellow class="traffic_cell <% if (status.yellow == 1) {%>active<% } %>"></div>
+      <div id=green class="traffic_cell <% if (status.green == 1) {%>active<% } %>"></div>
+    </ul>
   </body>
 </html>
