Add websockets- clints have accurate state now
But the socket.io logic is implemented in a bad spot, some refactoring required to better support additional transports.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <title><%= title %></title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src='javascripts/socket.io.min.js'></script>
     <script src='javascripts/trafficlight.js'></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
